﻿2012-06-25  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #32682: preselection of selectboxes fails if typoscript (prefill.xxxxx) is defined (Thanks to Markus Müller)
	* Fixed Bug #32934: xhtml validation fails because of formaction (Thanks to Philipp Kitzberger)
	* Set default value for plugin.powermail.label.parse to 0 due to security reasons

2012-06-23  Nicole Cordes <cordes@cps-it.de>

	* Added Feature #30190: Hook in module class (Thanks to Julia Pardanaud)
	* Fixed Bug #30438: validate-alpha-w-umlauts and validate-alphanum-w-umlaut in 1.6.4 broken (Thanks to Tobias)
	* Fixed Bug #30705: XLS export : unable to download in IE (Thanks to Julien Henchoz)
	* Removed header variable from mod1/class.tx_powermail_export.php as header()-function hasn't any return value
	* Fixed Bug #31011: Field validation doesnt work correctly (Thanks to Arek)
	* Fixed Bug #31029: Absolute path to icon_info.gif (Thanks to Markus Klein)
	* Added Feature #31340: no html possible in label of checkbox (Thanks to Martin Holtz)
	* Updated jQuery and jQuery Tools to the latest versions

2012-06-21  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #38246: DB Error in ext:lib/class.tx_powermail_functions_div.php Line 427 (Thanks to Björn Heinermann)

2012-06-20  Nicole Cordes <cordes@cps-it.de>

	* Investigated in Bug #38173; Tab order radio buttons (Thanks to Björn Heinermann)

2012-06-14  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #37629: Non-mandatory radio checkboxes aren't working

2012-06-13  Nicole Cordes <cordes@cps-it.de>

	* Added t3lib_div::removeXSS functions for proper sanitizing
	* Fixed Bug #37992: urldecoded input "grows" when switching between input and confirmation page (Thanks to Philipp Kitzberger)
	* Fixed Bug #37991: Missing labels on confirmation page (Thanks to Philipp Kitzberger)
	* Fixed Bug #35534: Multiple Steps PHP looses user input in 1.6.6 (Thanks to Philipp Kitzberger)

2012-06-12  Nicole Cordes <cordes@cps-it.de>
