@@ -293,7 +293,7 @@ class tx_powermail_html extends tslib_pibase {
 				if ($this->conf['label.']['parse']) {
 					$markerArray['###LABEL###'] = $this->div->parseFunc($options[$i][0], $this->cObj);
 				} else {
-					$markerArray['###LABEL###'] = htmlspecialchars($markerArray['###LABEL###']);
+					$markerArray['###LABEL###'] = htmlspecialchars($options[$i][0]);
 				}
 				$markerArray['###LABEL_NAME###'] = 'uid' . $this->uid . '_' . $i; // add labelname
 				$markerArray['###ID###'] = 'id="uid' . $this->uid . '_' . $i . '" '; // add labelname
@@ -359,7 +359,7 @@ class tx_powermail_html extends tslib_pibase {
 
 		// Outer Marker array
 		if ($this->conf['label.']['parse']) {
-			$this->markerArray['###LABEL_MAIN###'] = $this->div->parseFunc($this->title, $this->cObj, $this->conf['label.']['parse']);
+			$this->markerArray['###LABEL_MAIN###'] = $this->div->parseFunc($this->title, $this->cObj);
 		} else {
 			$this->markerArray['###LABEL_MAIN###'] = htmlspecialchars($this->title);
 		}
@@ -405,8 +405,11 @@ class tx_powermail_html extends tslib_pibase {
 			for ($i = 0; $i < count($optionlines); $i++) { // One tag for every option
 				$options[$i] = t3lib_div::trimExplode('|', $optionlines[$i], 0); // To split: label | value | *
 				$markerArray['###NAME###'] = 'name="' . $this->prefixId . '[uid' . $this->uid . ']" '; // add name to markerArray
-				$markerArray['###LABEL###'] = $this->div->parseFunc($options[$i][0], $this->cObj, $this->conf['label.']['parse']);
-				$markerArray['###LABEL###'] = ($this->conf['label.']['parse']) ? $markerArray['###LABEL###'] : htmlspecialchars($markerArray['###LABEL###']);
+				if ($this->conf['label.']['parse']) {
+					$markerArray['###LABEL###'] = $this->div->parseFunc($options[$i][0], $this->cObj);
+				} else {
+					$markerArray['###LABEL###'] = htmlspecialchars($options[$i][0]);
+				}
 				$markerArray['###LABEL_NAME###'] = 'uid' . $this->uid . '_' . $i; // add labelname
 				$markerArray['###ID###'] = 'id="uid' . $this->uid . '_' . $i . '" '; // add labelname
 				$markerArray['###VALUE###'] = 'value="' . (isset($options[$i][1]) ? htmlspecialchars($options[$i][1]) : htmlspecialchars($options[$i][0])) . '" ';
@@ -1214,7 +1217,7 @@ class tx_powermail_html extends tslib_pibase {
 		if ($this->conf['label.']['parse']) {
 			$this->markerArray['###LABEL###'] = $this->div->parseFunc($this->title, $this->cObj);
 		} else {
-			$this->markerArray['###LABEL###'] = htmlspecialchars($this->markerArray['###LABEL###']);
+			$this->markerArray['###LABEL###'] = htmlspecialchars($this->title);
 		}
 
 		// ###DESCRIPTION###
